--- a/javascript.html
+++ b/javascript.html
@@ -20,7 +20,7 @@
   		alert('input field is empty');
   	}
   	else {
-  		currentName.textContent = document.querySelector('input').value;
+  		currentName.textContent = 'Hello ' + document.querySelector('input').value;
   	}
 }
 </script>
