--- a/javascript.html
+++ b/javascript.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title>Activity page</title>
+	<title>JavaScript</title>
   </head>
   <body>
 	<h1>Hello Bob</h1>
@@ -20,7 +20,7 @@
   		alert('input field is empty');
   	}
   	else {
-  		currentName.textContent = document.querySelector('input').value;
+  		currentName.textContent = 'Hello ' +document.querySelector('input').value;
   	}
 }
 </script>
